# yt-music-download-ui

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dioxus.toml  Dockerfile  deno.jsonc  docker-compose.yml  import_map.json  kill.nu
api/: .openapi-generator-ignore  Cargo.toml  README.md
api/.openapi-generator/: FILES
api/docs/: Album.md  AlbumGetByPlaylistIdParams.md  AlbumGetParams.md  AlbumResult.md  AlbumType.md  ArtistRun.md  AudioFormat.md  Caption.md  DefaultApi.md  Format.md  LikeStatus.md  MenuPlaylists.md  MenuTokens.md  ParsedAlbum.md  ParsedPlaylist.md  Playlist.md  PlaylistGetParams.md  PlaylistItem.md  PlaylistTrackCount.md  Queue.md  QueueAuthor.md  QueueChip.md  QueueCurrent.md  QueueGetParams.md  QueueTrack.md  Song.md  SongGetParams.md  SongRuns.md  Thumbnail.md  TrendChange.md  VideoDetails.md  VideoDetailsThumbnail.md  VideoFormat.md  VideoFormatInitRange.md
api/src/: lib.rs
api/src/apis/: configuration.rs  default_api.rs
api/src/models/: album.rs  album_get_by_playlist_id_params.rs  album_get_params.rs  album_result.rs  album_type.rs  artist_run.rs  audio_format.rs  caption.rs  format.rs  like_status.rs  menu_playlists.rs  (+24 more)
scripts/: app.ts  auth.ts
scripts/api/: getPlaylist.ts  getQueue.ts
scripts/server/: README.md  app.ts  deno.jsonc  generate.ts
src/: config.rs  constants.rs  main.rs
src/app/: download_album.rs  download_playlist.rs  download_radio.rs  download_tabs.rs  mod.rs
src/interface/: browse_id.rs  mod.rs  playlist_id.rs  video_id.rs
src/logic/: download.rs  download_track.rs  mod.rs
style/: tailwind.config.js
(+17 files in other folders)
