[package]
name = "yt-music-download-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1.33.0", features = ["full"] }
load-dotenv = "0.1"
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "0.5", package = "dioxus" }
dioxus-liveview = { git = "https://github.com/DioxusLabs/dioxus", branch = "0.5", package = "dioxus-liveview", features = [
  "axum",
] }
dioxus-hot-reload = { git = "https://github.com/DioxusLabs/dioxus", branch = "0.5", package = "dioxus-hot-reload" }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
futures = "0.3.25"
reqwest = { version = "0.11.13", features = [
  "stream",
  "rustls-tls",
], default-features = false }
mp4ameta = "0.11.0"
anyhow = "1.0.75"
sanitize-filename = "0.5"
once_cell = "1"
cookie = "0.18.0"
serde_path_to_error = "0.1.14"
openapi = { path = "./api" }
url = "2.4.1"

[workspace]
members = ["api"]
